<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:weightSum="1">

        <TextView
            android:gravity="center"
            android:text="Gaze Duration Settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/gaze"
            android:layout_marginLeft="10dp"
            android:textColor="#000000"
            android:textSize = "20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="Standard Setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gazeDurationSetting"
            android:layout_marginLeft="10dp"
            android:textStyle="normal|bold|italic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="4dp">

        <TextView
            android:text="@string/gazeDurationFixed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gazeDurationFixedTimeText1"
            android:layout_marginLeft="10dp"
            android:textColor="#d50000"
            android:textStyle="normal|bold" />

        <TextView
            android:text="@string/gazeDurationFixedTime1"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:id="@+id/gazeDurationFixedTime1"
            android:layout_marginLeft="20dp"
            android:textStyle="normal|bold" />

        <TextView
            android:text="seconds"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:id="@+id/seconds1"
            android:layout_marginLeft="20dp"
            android:textStyle="normal|bold" />

        <Button
            android:text="Send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/duratidFixedButton1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="8dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="4dp">

        <TextView
            android:text="@string/gazeDurationFixed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gazeDurationFixedTimeText2"
            android:layout_marginLeft="10dp"
            android:textColor="#d50000"
            android:textStyle="normal|bold" />

        <TextView
            android:text="@string/gazeDurationFixedTime2"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:id="@+id/gazeDurationFixedTime2"
            android:layout_marginLeft="20dp"
            android:textStyle="normal|bold" />

        <TextView
            android:text="seconds"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:id="@+id/seconds2"
            android:layout_marginLeft="20dp"
            android:textStyle="normal|bold" />

        <Button
            android:text="Send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/duratidFixedButton2"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="8dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="4dp">

        <TextView
            android:text="@string/gazeDurationFixed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gazeDurationFixedTimeText3"
            android:layout_marginLeft="10dp"
            android:textColor="#d50000"
            android:textStyle="normal|bold" />

        <TextView
            android:text="@string/gazeDurationFixedTime3"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:id="@+id/gazeDurationFixedTime3"
            android:layout_marginLeft="20dp"
            android:textStyle="normal|bold" />

        <TextView
            android:text="seconds"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:id="@+id/seconds3"
            android:layout_marginLeft="20dp"
            android:textStyle="normal|bold" />

        <Button
            android:text="Send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/duratidFixedButton3"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="8dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="Customized Setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gazeDurationSetting2"
            android:layout_marginLeft="10dp"
            android:textStyle="normal|bold|italic" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="4dp">

        <TextView
            android:text="@string/gazeDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gazeDurationText"
            android:layout_marginLeft="10dp"
            android:textColor="#d50000"
            android:textStyle="normal|bold" />

        <EditText
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/messagegazeDuration"
            android:layout_marginLeft="20dp"
            android:text="@string/gazeDuration_value" />

        <TextView
            android:text="seconds"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:id="@+id/seconds4"
            android:layout_marginLeft="20dp"
            android:textStyle="normal|bold" />

        <Button
            android:text="Send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/durationSendButton"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="8dp" />

    </LinearLayout>
</LinearLayout>
